@@ -1,3 +1,13 @@
 # project in javafx (bingo-game) :
 project in javafx  created a bingo game with threads (until 12 borders (player)) .
+bulid:
+Download JavaFX 17.0.9 SDK from:
+🔗 https://gluonhq.com/products/javafx/
+(Scroll down to "Previous Releases" → JavaFX 17.0.9 SDK)
+
+Extract it (e.g., to C:\javafx-sdk-17.0.9).
+
+Compile & Run with the correct JavaFX version:
+javac --module-path "C:\.\.\project-in-javafx-bingo-game--master\project-in-javafx-bingo-game--master\17.0.9\javafx-sdk-17.0.9\lib" --add-modules javafx.controls,javafx.fxml application/Main.java
+java --module-path "C:\.\.\project-in-javafx-bingo-game--master\17.0.9\javafx-sdk-17.0.9\lib" --add-modules javafx.controls,javafx.fxml application.Main 5 2
 
